--- a/circFit/circFit/Base.lproj/Main.storyboard
+++ b/circFit/circFit/Base.lproj/Main.storyboard
@@ -226,7 +226,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CircuitCollectionViewCell" id="lX4-52-mRV" customClass="CircuitCollectionViewCell" customModule="circFit" customModuleProvider="target">
-                                        <rect key="frame" x="1" y="0.0" width="374" height="63"/>
+                                        <rect key="frame" x="0.5" y="0.0" width="374" height="63"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="63"/>
@@ -288,7 +288,7 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="sNu-KR-FBT" kind="presentation" id="J8P-Km-Dii"/>
+                                            <action selector="startButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="m59-NZ-Z3X"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -322,6 +322,7 @@
                         <outlet property="durationTextField" destination="er4-6o-92p" id="l0W-3d-lID"/>
                         <outlet property="exerciseNameTextField" destination="ooZ-gz-yAG" id="0oh-wH-v35"/>
                         <outlet property="exerciseTypePickerView" destination="xw8-lt-WOJ" id="Aby-YD-Blc"/>
+                        <segue destination="sNu-KR-FBT" kind="presentation" identifier="TimerStoryboardSegue" id="bDY-qh-cJg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -331,7 +332,7 @@
         <!--Timer screen-->
         <scene sceneID="xyX-8p-20X">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="TimerStoryboardSegue" storyboardName="Timer screen" id="sNu-KR-FBT" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardIdentifier="SegueToTimerStoryboard" storyboardName="Timer screen" id="sNu-KR-FBT" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DQI-KD-Nsa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="145" y="794"/>
